[package]
name = "sn_sdkg"
version = "0.1.0"
edition = "2021"
description = "Safe Network Synchronous Distributed Key Generation: enables dealerless section key generation"
categories = ["algorithms", "asynchronous", "cryptography", "network-programming"]
keywords = ["consensus", "asynchronous", "threshold"]
license = "MIT"

[dependencies]
bincode = "1.2.0"
byteorder = "1.3.2"
thiserror = "~1.0.31"
hex_fmt = "0.3"
rand = "0.6.5"
serde = { version = "1.0.102", features = ["derive", "rc"] }
tiny-keccak = { version = "2.0.1", features = ["sha3"]}
bls = { package = "blsttc", version = "6.0.0" }