[package]
name = "sn_sdkg"
version = "1.1.0"
edition = "2021"
description = "Safe Network Synchronous Distributed Key Generation: enables dealerless section key generation"
categories = ["algorithms", "asynchronous", "cryptography", "network-programming"]
keywords = ["consensus", "asynchronous", "threshold"]
license = "MIT"
repository = "https://github.com/maidsafe/sn_sdkg"
homepage = "https://maidsafe.net"
readme = "README.md"

[dependencies]
bincode = "1.2.0"
byteorder = "1.3.2"
hex_fmt = "0.3"
rand = "0.6.5"
serde = { version = "1.0.102", features = ["derive", "rc"] }
tiny-keccak = { version = "2.0.1", features = ["sha3"]}
thiserror = "1.0.31"
bls = { package = "blsttc", version = "7.0.0" }
log = "0.4.13"

[dev-dependencies]
env_logger = "0.8"
# quickcheck = "1"
# quickcheck_macros = "1"
